--- a/tinycards/app/assets/stylesheets/application.css.scss
+++ b/tinycards/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,4 @@
+@import "font-awesome";
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -12,4 +13,5 @@
  *
  *= require_tree .
  *= require_self
+ *= require font-awesome
  */
