--- a/tinycards/app/views/layouts/application.html.erb
+++ b/tinycards/app/views/layouts/application.html.erb
@@ -9,6 +9,14 @@
   </head>
 
   <body>
-    <%= yield %>
+    <script src="javascripts/jssor.slider-26.6.0.min.js" type="text/javascript"></script>
+
+    <%= render "layouts/header" %>
+    <div class="container">
+      <div class="show-value">
+        <%= yield %>
+      </div>
+    </div>
+    <%= render "layouts/footer" %>
   </body>
 </html>
