--- a/tinycards/app/views/layouts/application.html.erb
+++ b/tinycards/app/views/layouts/application.html.erb
@@ -5,8 +5,8 @@
     <link rel="icon" sizes="192x192" href="//d17u0960v8a9bp.cloudfront.net/192x192.png">
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track": "reload" %>
+    <%= javascript_include_tag "application", "data-turbolinks-track": "reload" %>
   </head>
 
   <body>
