--- a/tinycards/app/views/layouts/_footer.html.erb
+++ b/tinycards/app/views/layouts/_footer.html.erb
@@ -1,12 +1,11 @@
 <footer>
   <div class="container">
     <div class="quick-links">
-      <%= link_to "ABOUT", root_path, class: "link-item" %>
-      <%= link_to "SUPPORT", "#", class: "link-item" %>
-      <%= link_to "TERMS", "#", class: "link-item" %>
-      <%= link_to "DOULINGO", "#", class: "link-item" %>
-      <%= link_to "FACEBOOK", "#", class: "link-item" %>
-      <%= link_to "TWITTER", "#", class: "link-item" %>
+      <a href="#" class="link-item">ABOUT</a>
+      <a href="#" class="link-item">TERMS</a>
+      <a href="#" class="link-item">FACEBOOK</a>
+      <a href="#" class="link-item">TWITTER</a>
+      <a href="#" class="link-item">SUPPORT</a>
     </div>
   </div>
 </footer>
