--- a/tinycards/app/views/layouts/_header.html.erb
+++ b/tinycards/app/views/layouts/_header.html.erb
@@ -15,16 +15,14 @@
       </div>
 
       <div class="nav-list">
-          <%= link_to root_path, class: "nav-item" do %>
-            <span class="fa fa-home"></span>
-            <span class="nav-text">home</span>
-          <% end %>
         <div class="nav-item">
-          <%= link_to " CREATE", root_path, class: "cl-text fa fa-plus" %>
+          <a href="#" class="cl-text fa fa-home"> HOME</a>
+        </div>
+        <div class="nav-item">
+          <a href="#" class="cl-text fa fa-plus"> CREATE</a>
         </div>
         <div class="nav-item">
           <% if user_signed_in? %>
-            <!-- <%= link_to " ACCOUNT", root_path, class: "cl-text fa fa-user" %> -->
             <%= link_to " SIGN OUT", destroy_user_session_path, method: :delete, data: {hover: "Sign out"}, class: "cl-text fa fa-user" %>
           <% else %>
             <%= link_to " LOG IN", new_user_session_path, class: "cl-text fa fa-user" %>
