template angular login sign up

--- a/angular2/src/app/app.component.html
+++ b/angular2/src/app/app.component.html
@@ -22,17 +22,15 @@
           <a href="#" class="cl-text fa fa-plus">CREATE</a>
         </div>
         <div class="nav-item">
-          <a href="#" class="cl-text fa fa-user">LOG IN</a>
+          <a href="login" class="cl-text fa fa-user">LOG IN</a>
         </div>
       </div>
     </div>
   </div>
 </header>
 <div class="container">
-  <div class="show-value">
     <router-outlet>
     </router-outlet>
-  </div>
 </div>
 <footer>
   <div class="container">
