--- a/tinycards/app/views/layouts/_header.html.erb
+++ b/tinycards/app/views/layouts/_header.html.erb
@@ -1,34 +1,43 @@
-<header>
-  <div class="header-logo">
-    <div class="inner">
-      <div class="logo">
-        <%= link_to image_tag("logo.jpg"), root_path %>
-        <div class="name-logo">
-          <%= link_to "tinycards", root_path %>
-        </div>
-      </div>
+<div class="header-wrap">
+  <header class="fixed-top">
+    <nav class="navbar fixed-top navbar-expand-md navbar-light header-logo">
+      <div class="inner">
+        <%= link_to root_path, class: "navbar-brand nav-logo" do %>
+          <%= image_tag("logo.jpg", width: "40", height: "40", class: "nav-logo-image") %>
+          <div class="name-logo">tinycards</div>
+        <% end %>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="search">
-        <form class="form-inline">
-          <input class="form-control f-search" type="search" placeholder="Search" aria-label="Search">
-        </form>
-      </div>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="search-form">
+            <input class="search-input" type="search" placeholder="Search" aria-label="Search">
+          </div>
 
-      <div class="nav-list">
-        <div class="nav-item">
-          <a href="#" class="cl-text fa fa-home"> HOME</a>
-        </div>
-        <div class="nav-item">
-          <a href="#" class="cl-text fa fa-plus"> CREATE</a>
-        </div>
-        <div class="nav-item">
-          <% if user_signed_in? %>
-            <%= link_to " SIGN OUT", destroy_user_session_path, method: :delete, data: {hover: "Sign out"}, class: "cl-text fa fa-user" %>
-          <% else %>
-            <%= link_to " LOG IN", new_user_session_path, class: "cl-text fa fa-user" %>
-          <% end %>
+          <ul class="navbar-nav mr-auto nav-list">
+            <%= link_to root_path, class: "nav-item nav-item-active" do %>
+              <div class="fa fa-home nav-icon"></div>
+              <div class="nav-text">home</div>
+            <% end %>
+            <%= link_to root_path, class: "nav-item" do %>
+              <div class="fa fa-plus nav-icon"></div>
+              <div class="nav-text">create</div>
+            <% end %>
+            <% if user_signed_in? %>
+              <%= link_to destroy_user_session_path, method: :delete, data: {hover: "Sign out"}, class: "nav-item" do %>
+                <div class="fa fa-user nav-icon"></div>
+                <div class="nav-text">Log out</div>
+              <% end %>
+            <% else %>
+              <%= link_to new_user_session_path, class: "nav-item" do %>
+                <div class="fa fa-user nav-icon"></div>
+                <div class="nav-text">Log in</div>
+              <% end %>
+            <% end %>
+          </ul>
         </div>
       </div>
-    </div>
-  </div>
-</header>
+    </nav>
+  </header>
+</div>
