--- a/tinycards/app/views/decks/show.html.erb
+++ b/tinycards/app/views/decks/show.html.erb
@@ -18,7 +18,7 @@
               <a href="#" class="name"> Bette</a>
             </div>
           </div>
-          <div class="favorite">
+          <div class="btn-ct">
             <button type="button" class="btn btn-outline-success" style="width: 80%; margin-right: 5px;"><i class="fa fa-star-o" aria-hidden="true"></i> FAVORITE</button>
             <button type="button" class="btn btn-outline-success" style="width: 15%"><i class="fa fa-external-link" aria-hidden="true"></i></button>
           </div>
