add create deck part2

--- a/tinycards/app/assets/stylesheets/deck.scss
+++ b/tinycards/app/assets/stylesheets/deck.scss
@@ -2,6 +2,8 @@
   padding: 20px;
 
   .img-deck {
+    height: 310px;
+
     img {
       width: 90%;
       margin: auto;
@@ -16,6 +18,15 @@
 
   .txt {
     margin: 15px;
+
+    .ip {
+      background-color: transparent;
+      border-left: none;
+      border-radius: 0px;
+      border-right: none;
+      border-top: none;
+      width: 100%;
+    }
 
     .name-deck {
       font-size: 25px;
@@ -46,14 +57,24 @@
 
       .btn-ct-setting {
         background-color: #fff;
+        border-radius: 10px;
         border: 1px solid #32cdff;
         width: 15%;
       }
 
       .btn-ct-publ {
+        cursor: pointer;
+        font-weight: bold;
+        background-color: #32cdff;
+        border-color: #32cdff;
+        border-radius: 12px;
         margin-left: 8px;
         opacity: 0.7;
         width: 78%;
+      }
+
+      .fa-cog {
+        color: #32cdff;
       }
     }
   }
@@ -83,6 +104,14 @@
         font-weight: bold;
         margin-top: 10px;
       }
+
+      img {
+        width: 100%;
+      }
+    }
+
+    .preview-img {
+      top: 0% !important;
     }
   }
 }
