--- a/tinycards/app/assets/stylesheets/home.scss
+++ b/tinycards/app/assets/stylesheets/home.scss
@@ -14,16 +14,12 @@
   }
 
   .favorites {
-    height: 350px;
+    min-height: 350px;
 
     .title {
       font-size: 30px;
       font-weight: bold;
       padding: 20px;
-    }
-
-    .list-decks-favor {
-      display: flex;
     }
 
     .item-deck {
@@ -34,16 +30,19 @@
       img {
         width: 100%;
         border-radius: 18px;
+        box-shadow: 0 2px 10px 0 rgba(0,0,0,.17);
       }
 
       .image-cover {
+        height: 174px;
         background-color: #fff;
       }
 
       .name {
-        margin-top: 5px;
+        margin-top: 10px;
 
         .name-deck {
+          color: #5c5c5c;
           font-size: 18px;
           font-weight: bold;
         }
