--- a/tinycards/app/views/home/index.html.erb
+++ b/tinycards/app/views/home/index.html.erb
@@ -8,16 +8,9 @@
         <span class="txt">Your favorites</span>
       </div>
       <div class="list-decks-favor">
-        <% @decks.each do |deck| %>
-          <div class="item-deck">
-            <div class="image-cover">
-              <%= link_to image_tag("deck-demo.jpg"), deck %>
-            </div>
-            <div class="name">
-              <%= link_to deck.title, "#", class: "name-deck" %>
-            </div>
-          </div>
-        <% end %>
+        <div class="row" style="margin: auto;">
+          <%= render @decks %>
+        </div>
       </div>
     </div>
   </div>
