add slide decks home

--- a/tinycards/app/assets/stylesheets/home.scss
+++ b/tinycards/app/assets/stylesheets/home.scss
@@ -7,9 +7,9 @@
   width: auto;
 
   .slide {
-    height: 200px;
+    height: 220px;
     width: 100%;
-    background-color: #ddddff;
+    background-color: #fff;
     border-radius: 8px;
   }
 
