--- a/tinycards/app/views/decks/new.html.erb
+++ b/tinycards/app/views/decks/new.html.erb
@@ -31,7 +31,7 @@
       <div class="col-xs-12 col-md-8">
         <div class="right">
           <div class="add-card">
-            <button class="add" id="btn-addCard">+</button>
+            <button type="button" class="add" id="btn-addCard">+</button>
           </div>
           <div class="wrapper">
             <div class="n-card">
