--- a/tinycards/app/views/layouts/application.html.erb
+++ b/tinycards/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 
     <%= stylesheet_link_tag "application", media: "all" %>
     <%= javascript_include_tag "application" %>
+    <script src="javascripts/jssor.slider-26.8.0.min.js" type="text/javascript"></script>
   </head>
 
   <body>
