--- a/tinycards/app/views/decks/new.html.erb
+++ b/tinycards/app/views/decks/new.html.erb
@@ -39,24 +39,7 @@
                 <h3>1</h3>
               </div>
 
-              <div class="front-card">
-                <div class="f-deck">
-                  <div class="import-cover-deck">
-                    <div class="change-cover">
-                      <textarea type="text" rows="6" class="form-control ct-text" id="front-card-value" placeholder="Front"></textarea>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="back-card">
-                <div class="f-deck">
-                  <div class="import-cover-deck">
-                    <div class="change-cover">
-                      <textarea type="text" rows="6" class="form-control ct-text" id="back-card-value" placeholder="Back"></textarea>
-                    </div>
-                  </div>
-                </div>
-              </div>
+                <%= link_to_add_fields f, :cards %>
 
               <div class="list-option">
                 <button class="del"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
