--- a/tinycards/app/views/decks/_card_fields.html.erb
+++ b/tinycards/app/views/decks/_card_fields.html.erb
@@ -1,18 +1,28 @@
-<div class="front-card">
-  <div class="f-deck">
-    <div class="import-cover-deck">
-      <div class="change-cover">
-        <textarea type="text" rows="6" class="form-control ct-text" id="front-card-value" placeholder="Front"></textarea>
+<div class="wrapper">
+  <div class="n-card destroy">
+    <div class="number">
+      <h3>1</h3>
+    </div>
+    <div class="front-card">
+      <div class="f-deck">
+        <div class="import-cover-deck">
+          <div class="change-cover">
+            <%= f.text_field :front, class: "form-control", id: "front-card-value", placeholder: "Front" %>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
-<div class="back-card">
-  <div class="f-deck">
-    <div class="import-cover-deck">
-      <div class="change-cover">
-        <textarea type="text" rows="6" class="form-control ct-text" id="back-card-value" placeholder="Back"></textarea>
+    <div class="back-card">
+      <div class="f-deck">
+        <div class="import-cover-deck">
+          <div class="change-cover">
+            <%= f.text_field :back, class: "form-control", id: "back-card-value", placeholder: "Back" %>
+          </div>
+        </div>
       </div>
     </div>
+    <%= link_to "javascript:void(0)", onclick: "remove_fields(this)" do %>
+    <span class="del"><i class="fa fa-trash-o" aria-hidden="true"></i></span>
+    <% end %>
   </div>
 </div>
