--- a/angular2/src/app/create-deck/create-deck.component.html
+++ b/angular2/src/app/create-deck/create-deck.component.html
@@ -4,8 +4,7 @@
     <div class="row" style="margin-top: 25px;">
       <div class="col-xs-12 col-md-4">
         <div class="left">
-          <div class="cover-deck" data-whatever="@mdo">
-          <button id="openModalButton" [hidden]="true" data-toggle="modal" data-target="#coverImgModal">Open Modal</button>
+          <div class="cover-deck" (click)="coverImgModal.open()" data-whatever="@mdo">
             <div id="preview-img" class="import-cover-deck">
               <img id="blah" src="#"/>
               <div class="img-tog">
@@ -47,21 +46,18 @@
     </div>
 
     <!--   Modal -->
-    <div class="modal fade" id="coverImgModal" tabindex="-1" role="dialog" aria-labelledby="coverImgModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="coverImgModalLabel">INSERT IMAGE</h5>
-          </div>
-          <div class="modal-body">
+    <modal #coverImgModal>
+          <modal-header>
+            <h5 id="coverImgModalLabel">INSERT IMAGE</h5>
+          </modal-header>
+          <modal-content>
+            <input name="myFile" type="file">
             <!-- <%= f.file_field :cover_image, id: "imgInp" %> -->
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          </div>
-        </div>
-      </div>
-    </div>
+          </modal-content>
+          <modal-footer>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="coverImgModal.close()">Close</button>
+          </modal-footer>
+    </modal>
   </form>
   <!-- <% end %> -->
 </div>
