--- a/tinycards/app/views/decks/show.html.erb
+++ b/tinycards/app/views/decks/show.html.erb
@@ -37,31 +37,47 @@
           <div id="b1" class="containerTab">
             <div class="list-lesson">
               <div class="row">
-                <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
-                  <div class="item-lesson">
-                    <%= link_to image_tag("lesson.png"), "#" %>
+                <% @lessons.each do |lesson| %>
+                  <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                    <div class="item-lesson" onclick="modalLesson(<%= lesson.id %>)">
+                      <%= image_tag "lesson.png" %>
+                    </div>
                   </div>
-                </div>
-                <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
-                  <div class="item-lesson">
-                    <%= link_to image_tag("lesson.png"), "#" %>
+                  <!-- Modal -->
+                  <div class="modal fade bd-example-modal-lg" id="<%= lesson.id %>" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+                    <div class="modal-dialog modal-lg">
+                      <!-- Modal content-->
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h3 id="title<%= lesson.id %>"></h3>
+                          <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
+                        <div class="modal-body">
+                          <% lesson.cards.each do |card|%>
+                            <div class="containerr">
+                              <div class="ct-card">
+                                <div class="item-card front" style="border-radius: 15px;">
+                                  <% if card.picture.blank? %>
+                                    <%= card.front %>
+                                  <% else %>
+                                    <%= image_tag card.picture, style: "width: 100%" %>
+                                  <% end %>
+                                </div>
+                                <div class="item-card back">
+                                  <%= card.back %>
+                                </div>
+                              </div>
+                            </div>
+                          <% end %>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-success align-content-end">Continue</button>
+                          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                      </div>
+                    </div>
                   </div>
-                </div>
-                <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
-                  <div class="item-lesson">
-                    <%= link_to image_tag("lesson.png"), "#" %>
-                  </div>
-                </div>
-                <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
-                  <div class="item-lesson">
-                    <%= link_to image_tag("lesson.png"), "#" %>
-                  </div>
-                </div>
-                <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
-                  <div class="item-lesson">
-                    <%= link_to image_tag("lesson.png"), "#" %>
-                  </div>
-                </div>
+                <% end %>
               </div>
             </div>
           </div>
@@ -93,3 +109,4 @@
     </div>
   </div>
 </div>
+
